# cosmic-ext-applet-logomenu

applet/: Cargo.toml
applet/src/: app.rs
i18n/cs/: cosmic_ext_logomenu_settings.ftl  liblog.ftl
i18n/uk/: liblog.ftl
res/: dev.cappsy.CosmicExtAppletLogoMenu.Settings.desktop  dev.cappsy.CosmicExtAppletLogoMenu.desktop  dev.cappsy.CosmicExtAppletLogoMenu.metainfo.xml
settings/: Cargo.toml
settings/src/: app.rs
