[package]
name = "cosmic-ext-logomenu-settings"
version = "0.6.11"
edition = "2024"
license = "GPL-3.0"
description = "Settings application for COSMIC Logo Menu applet"
repository = "https://github.com/cappsyco/cosmic-ext-applet-logomenu"

[dependencies]
i18n-embed-fl = "0.10.0"
rust-embed = "8.11.0"
serde = "1.0.228"
liblog = { path = "../liblog" }
rfd = "0.17.2"
sysinfo = "0.38.4"
open = "5.3.3"

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "about",
    "multi-window",
    "single-instance",
    "winit",
    "wayland",
    "wgpu",
    "tokio"
]

[features]
default = ["xdg-portal"]
xdg-portal = ["libcosmic/xdg-portal"]
flatpak = []
